@@ -33,6 +33,7 @@ OPENSEADRAGON CHANGELOG
 * Fixed overlays position (use rounding instead of flooring and ceiling) (#741)
 * Fixed issue with including overlays in your tileSources array when creating/opening in the viewer (#745)
 * Fixed issue in iOS devices that would cause all touch events to fail after a Multitasking Gesture was triggered (#744)
+* You can now change viewport margins after the viewer is created (#721)
 
 2.0.0:
 
